--- a/react/src/components/Item.css
+++ b/react/src/components/Item.css
@@ -1,5 +1,5 @@
 .btn {
-    border: 2px solid black;
+    border: 2px solid rgb(237, 95, 192);
     background-color: white;
     color: black;
     padding: 14px 28px;
