--- a/react/src/components/Cosmetic.css
+++ b/react/src/components/Cosmetic.css
@@ -1,5 +1,5 @@
 .btn {
-    border: 2px solid black;
+    border: 2px solid rgb(234, 157, 215);
     background-color: white;
     color: black;
     padding: 14px 28px;
