--- a/react/src/components/Recommend.css
+++ b/react/src/components/Recommend.css
@@ -11,8 +11,8 @@
     flex-wrap: nowrap; }
 
 .recommend-item {
-    background-color: #f4a9d2; 
-    color: white;
+    background-color: #f8daea; 
+    color: rgb(11, 11, 11);
     width: 200px; 
     height: 200px; 
     padding: 15px;
