--- a/react/src/components/Cosmetic.css
+++ b/react/src/components/Cosmetic.css
@@ -1,9 +1,77 @@
 .btn {
     border: 2px solid black;
-    background-color: white;
+    background-color: lightcoral;
     color: black;
     padding: 14px 28px;
     font-size: 16px;
     cursor: pointer;
-  }
+    font-size: large;
+    font-weight: bold;
+}
+  
+.containerLarge{
+  width: 1400px;
+  height: 600px;
+}
+
+.containerShop{
+  width: 1100px;
+  height: 300px;
+}
+
+.medium {
+  width: 450px;
+  height: 600px;
+  overflow: hidden;
+}
+
+.mediumShop {
+  width: 300px;
+  height: 250px;
+  overflow: hidden;
+}
+  
+.card-title-text {
+  font-size: xx-large;
+  font-weight: bold;
+  font-family: 'Playfair Display', serif;
+}
+
+.shop-title-text {
+  font-size: xx-large;
+  font-weight: bold;
+  font-family: 'Playfair Display', serif;
+  text-align: left;
+}
+
+.other-text {
+  font-size: x-large;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, serif;
+  text-align: left;
+}
+
+.description {
+  font-size: large;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, serif;
+  text-align: left;
+}
+
+.left {
+  float: left;
+  margin-right: 100px;
+}
+
+.right {
+  float: right;
+}
+
+.bottom {
+  clear: both;
+}
+
+.bottomSpace {
+  margin-bottom: 20px;
+}
+
+
   
